fix: overflow da tabela para nao esconder o menu ao abrir

--- a/static/global/css/style.css
+++ b/static/global/css/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-  --background-primary: #F8F9FA;
-  --background-secondary: #F2F2F2;
+  --background-primary: #f8f9fa;
+  --background-secondary: #f2f2f2;
   --text-primary: rgba(0, 0, 0, 0.996);
 }
 
@@ -77,6 +77,10 @@ a.page-link:focus {
 nav,
 footer {
   background-color: var(--background-secondary);
+}
+
+.table-responsive {
+  overflow: visible;
 }
 
 th,
